<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    tools:context="com.sero.chaoshengbo.module.LoginActivity">

    <Button
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/white_bg"
        android:textSize="15sp"
        android:background="@color/transport"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/tran_white_bg"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_type"
            android:textColor="@color/white_bg"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/img_weixin"
                android:layout_weight="1"
                android:padding="25dp"
                android:id="@+id/login_weixin" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/img_weibo"
                android:layout_weight="1"
                android:padding="25dp"
                android:id="@+id/login_weibo" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            >
            <CheckBox
                android:id="@+id/login_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:layout_marginRight="4dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_agreement"
                android:textColor="@color/white_bg"
                android:textSize="15dp"
                android:id="@+id/login_xieyi" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
