<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_avator_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />


            <ImageView
                android:id="@+id/user_avator"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="40dp"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/user_avator"
                android:layout_marginBottom="10dp"
                android:drawablePadding="5dp"
                android:textColor="@color/white_bg"
                tools:text="名字" />

            <TextView
                android:id="@+id/user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/user_name"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white_bg"
                android:textSize="11dp"
                tools:text="地址" />

            <TextView
                android:id="@+id/user_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/user_location"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white_bg"
                android:textSize="12dp"
                tools:text="个人介绍" />

            <TextView
                android:id="@+id/user_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/solid_button_shape"
                android:layout_below="@id/user_intro"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="编辑"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/tran_black_bg"
                android:orientation="horizontal"
                android:layout_below="@id/user_follow">

                <LinearLayout
                    android:id="@+id/user_attention_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white_bg"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="30"
                        android:id="@+id/user_attention_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white_bg"
                        android:textSize="15sp"
                        tools:text="关注"
                        android:text="关注" />
                </LinearLayout>

                <ImageView
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="9dp"
                    android:layout_marginTop="9dp"
                    android:background="@color/white_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white_bg"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="30"
                        android:id="@+id/user_follow_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white_bg"
                        android:textSize="15sp"
                        tools:text="粉丝"
                        android:text="粉丝" />
                </LinearLayout>

                <ImageView
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="9dp"
                    android:layout_marginTop="9dp"
                    android:background="@color/white_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white_bg"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:text="30"
                        android:id="@+id/user_buzz_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white_bg"
                        android:textSize="15sp"
                        tools:text="人气"
                        android:text="人气" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/user_contribution"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_txt1"
                android:textColor="@color/textColor3"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:drawableRight="@mipmap/right"
                android:gravity="right" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <LinearLayout
            android:id="@+id/user_myVideo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_txt2"
                android:textColor="@color/textColor3"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:drawableRight="@mipmap/right"
                android:gravity="right" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <LinearLayout
            android:id="@+id/user_myNews"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_txt3"
                android:textColor="@color/textColor3"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:drawableRight="@mipmap/right"
                android:gravity="right" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <LinearLayout
            android:id="@+id/user_myEnergy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_txt4"
                android:textColor="@color/textColor3"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text_myEnergy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:drawableRight="@mipmap/right"
                android:textColor="@color/textColor6"
                tools:text="1221432"
                android:gravity="right|center_vertical" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:id="@+id/user_mycalorie"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_txt5"
                android:textColor="@color/textColor3"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text_calorie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:drawableRight="@mipmap/right"
                android:textColor="@color/textColor6"
                tools:text="3423"
                android:gravity="right|center_vertical" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:id="@+id/user_myBill"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_txt6"
                android:textColor="@color/textColor3"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:drawableRight="@mipmap/right"
                android:textColor="@color/textColor6"
                android:gravity="right|center_vertical" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:id="@+id/user_myQuestion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_txt7"
                android:textColor="@color/textColor3"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:drawableRight="@mipmap/right"
                android:textColor="@color/textColor6"
                android:gravity="right|center_vertical" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:id="@+id/user_caishen"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/white_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_txt8"
                android:textColor="@color/textColor3"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:drawableRight="@mipmap/right"
                android:textColor="@color/textColor3"
                android:text="@string/user_txt8_1"
                android:gravity="right|center_vertical" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:id="@+id/user_setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white_bg"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_txt9"
                android:textColor="@color/textColor3"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:drawableRight="@mipmap/right"
                android:textColor="@color/textColor3"
                android:gravity="right|center_vertical" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>